--- a/frontend/src/pages/CSS/LoginSignup.css
+++ b/frontend/src/pages/CSS/LoginSignup.css
@@ -6,10 +6,11 @@
 }
 .loginsignup-container{
     width: 580px;
-    height: 600px;
+    height: auto;
     background-color: white;
     margin: auto;
     padding: 40px 60px;
+    border-radius: 10px;
 }
 .loginsignup-container  h1{
     margin: 20px 0;
@@ -49,6 +50,7 @@
 .loginsignup-login span{
     color: #ff4141;
     font-weight: 600;
+    cursor: pointer;
 }
 .loginsignup-agree{
     display: flex;
@@ -60,9 +62,10 @@
     font-weight: 500;
 }
 
-@media (max-width:1280px) {
+@media (max-width:1400px) {
     .loginsignup{
         padding-top: 50px;
+        padding-bottom: 150px;
     }
     .loginsignup-container{
         width: auto;
@@ -92,7 +95,17 @@
     }
 }
 
+@media (max-width:1024px) {
+    .loginsignup{
+        padding-bottom: 100px;
+    }
+}
+
 @media (max-width:800px){
+
+    .loginsignup{
+        padding-bottom: 100px;
+    }
     .loginsignup-container{
         padding: 20px 30px;
     }
