ShopCategory component updated

--- a/frontend/src/pages/CSS/ShopCategory.css
+++ b/frontend/src/pages/CSS/ShopCategory.css
@@ -44,7 +44,7 @@
     }
     .shopcategory-indexSort{
         width: 90%;
-        margin-right: auto;
+        margin: auto;
     }
     .shopcategory-sort{
         padding: 5px 10px;
